--- a/src/Qosmos/Qosmos.csproj
+++ b/src/Qosmos/Qosmos.csproj
@@ -10,5 +10,9 @@
   <ItemGroup>
     <PackageReference Include="Serilog.AspNetCore" Version="10.0.0" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <Content Include="Configurations/**/*.json" CopyToOutputDirectory="PreserveNewest" CopyToPublishDirectory="PreserveNewest"/>
+  </ItemGroup>
 
 </Project>
