--- a/src/Qosmos/Qosmos.csproj
+++ b/src/Qosmos/Qosmos.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
+    <PackageReference Include="OneOf" Version="3.0.271" />
     <PackageReference Include="Semver" Version="3.0.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="10.0.0" />
   </ItemGroup>
